--- a/Wit.Net.csproj
+++ b/Wit.Net.csproj
@@ -14,6 +14,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Debug\netstandard2.0\Wit.Net.xml</DocumentationFile>
     <LangVersion>latest</LangVersion>
+    <NoWarn>1701;1702;1591;</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
