--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,10 +14,10 @@ after_build:
 - cmd: dotnet build
 artifacts:
 - path: '**\*.nupkg'
-  name: WitSharp
+  name: WitSharp.1.{build}
 deploy:
 - provider: NuGet
   server: https://www.nuget.org/api/v2/package
   api_key:
     secure: iZ4sXMiLBYQi2UHPlGgqPvQKMgB8oYlfsOuckZzQ4Zm9GEcdpkRVLNabwfHt0AL9
-  artifact: WitSharp
+  artifact: WitSharp.1.{build}
